Add video component + video to blog

--- a/app/src/content/blog/dieta-low-carb.mdx
+++ b/app/src/content/blog/dieta-low-carb.mdx
@@ -7,7 +7,7 @@ image: {
 publishDate: "2023-07-10 00:00"
 category: "Nutrición"
 author: "Júlia Farré"
-tags: [nutrición, dieta, low-carb]
+tags: [ nutrición, dieta, low-carb ]
 ---
 
 
@@ -58,6 +58,13 @@ También se ha observado que una dieta baja en carbohidratos puede mejorar los n
 
 Muchas personas que siguen una dieta Low Carb informan una mayor sensación de saciedad y energía estable a lo largo del día. Al enfocarse en proteínas y grasas saludables, esta dieta puede proporcionar nutrientes esenciales y favorecer una mayor estabilidad en los niveles de energía.
 
+import Video from '../../components/Video.astro'
+
+<Video
+    title='Dieta Low Carb ¿Cuándo seguir una dieta baja en carbohidratos?'
+    link='https://www.youtube.com/watch?v=Xa6y0MPcrNs'
+    src='https://i.ytimg.com/vi/Xa6y0MPcrNs/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAgAR0xB9rkJsH2CtNgDmj-icpKgw'
+/>
 
 ## ¿Qué alimentos incluir en una dieta baja en carbohidratos?
 
